force-app/main/default/objects/Asset/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <label>Asset ID</label>
    <type>TextArea</type>
</CustomField>