force-app/main/default/objects/Asset/fields/Asset_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Asset_Purchase_Date__c</fullName>
    <label>Asset Purchase Date</label>
    <type>DateTime</type>
</CustomField>