force-app/main/default/objects/Asset/fields/Asset_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Asset_Warranty__c</fullName>
    <label>Asset Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Warranty</fullName>
            </value>
            <value>
                <fullName>Warranty Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>