force-app/main/default/objects/Asset/fields/Critical_Safety_Device__c.field-meta.xml
<CustomField>
    <fullName>Critical_Safety_Device__c</fullName>
    <label>Critical Safety Device?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>